<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

                 <!-- main app related -->
    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_detail">Weather</string>
    <string name="title_activity_settings">SettingsActivity</string>
              <!-- Location related -->
    <string name="pref_location_key">location</string>
    <string name="pref_location_label" translatable="false">location</string>
    <string name="pref_location_default" translatable="false">94043</string>
    <string name="action_my_location"> My Location:OFF </string>
              <!-- Temperature unit related -->
    <string name="pref_units_key">temperature</string>
    <string name="pref_units_title" translatable="false">Choose temperature units</string>
    <string name="pref_units_summary" translatable="false">Enter temperature units</string>
    <string name="pref_units_metric" translatable="false">CELSIUS</string>
    <string name="pref_units_imperial" translatable="false">FAHRENHEIT</string>
    <string name="action_map" translatable="false">Use map to find location</string>
    <string name="to_share"> Choose how to share </string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="format_full_friendly_date"><xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g></string>
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>
    <string name="format_wind_kmh">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> kmh <xliff:g id="direction">%2$s</xliff:g></string>
    <string name="format_wind_mh">Wind: <xliff:g id="speed">%1$1.0f</xliff:g>mph<xliff:g id="direction">%2$s</xliff:g></string>
    <string name="format_pressure">Pressure:<xliff:g id="pressure">%1$1.0f</xliff:g>hpa</string>
    <string name="format_humidity">Humidity: <xliff:g id="pressure">%1.0f</xliff:g> %%</string>
                         <!-- Color codes -->
    <string name="dark_green">"#006400"</string>
    <string name="light_blue">"#ff64c2f4"</string>
    <string name="light_orange">"#e1992b"</string>

             <!-- SyncAdapter related -->
    <string name="sync_account_type">sunshine.example.com</string>
    <string name="content_authority">com.example.android.sunshine.app</string>

    <!-- Notification Format -->
    <string name="format_notification">
    Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g>
    </string>

    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification
    </string>
</resources>
