<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">
    <EditTextPreference
        android:key="@string/pref_location_key"
        android:title="@string/pref_location_label"
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:singleLine="true" />
    <ListPreference
        android:key="@string/pref_units_key"
        android:title="@string/pref_units_title"
        android:summary="@string/pref_units_summary"
        android:defaultValue="@string/pref_units_metric"
        android:entries="@array/TemperatureOptions"
        android:entryValues="@array/TemperatureOptionsValues">

    </ListPreference>

</PreferenceScreen>